--- a/src/main/resources/com/example/diplom1/TempPr.fxml
+++ b/src/main/resources/com/example/diplom1/TempPr.fxml
@@ -5,27 +5,34 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="873.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.diplom1.SceneController">
-   <children>
-      <Text fill="DARKORANGE" layoutX="28.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="В соответствии с требованиями технологического процесса весьпроцесс обжига можно разделить на восемь температурных зонв первой зоне происходит нагрев плитки до 850 900 с. Втораязона, где плитка нагревается до 908 - 950 С, является периодомупругих деформаций. При дальнейшем нагревании до 1040 - 1080 св третьей зоне происходит разрушение кристаллических решеток глинистых минералов и образование расплавов. В четвертой зонепроисходит выдержка температуры для ее выравнивания по сечениюизделий и накопления расплава, необходимого для повышениякачества изделий. в пятой зоне, при охлаждении плиток до 600 спроисходит затвердевание жидкой фазы. в следующей шестой зонеплитки охлаждаются еще до 500 с. Охлаждение плиток еще на100 с в седьмой зоне характеризуется модификационными изменениямикварца. восьмой зоне плитки охлаждаются до комнатой температуры.При разработке схемы автоматизации важнейшей задачей являетсяреализация и поддержание температурного режима по зонам печи.Температурный режим, представленный в графическом виде, приведенв иллюстрации." textAlignment="JUSTIFY" wrappingWidth="1136.08203125">
-         <font>
-            <Font name="System Italic" size="18.0" />
-         </font>
-      </Text>
-      <Label layoutX="422.0" layoutY="7.0" text="Температурный режим" textFill="#ff8c00">
-         <font>
-            <Font name="System Italic" size="31.0" />
-         </font>
-      </Label>
-      <Button fx:id="Back" layoutX="-4.0" layoutY="618.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="71.0" prefWidth="1200.0" style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,      #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );   " text="Вернуться" textFill="WHITE">
-         <font>
-            <Font name="System Italic" size="30.0" />
-         </font>
-      </Button>
-      <ImageView fitHeight="344.0" fitWidth="681.0" layoutX="249.0" layoutY="46.0">
-         <image>
-            <Image url="file:\C:\Users\mikon\OneDrive\Рабочий стол\Diplom\Diplom\src\main\resources\pictures\PhotoGraf.png" />
-         </image>
-      </ImageView>
-   </children>
+<AnchorPane prefHeight="500.0" prefWidth="873.0" style="-fx-background-color: #14242B;"
+            xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.diplom1.SceneController">
+    <children>
+        <Text fill="DARKORANGE" layoutX="28.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0"
+              text="В соответствии с требованиями технологического процесса весьпроцесс обжига можно разделить на восемь температурных зонв первой зоне происходит нагрев плитки до 850 900 с. Втораязона, где плитка нагревается до 908 - 950 С, является периодомупругих деформаций. При дальнейшем нагревании до 1040 - 1080 св третьей зоне происходит разрушение кристаллических решеток глинистых минералов и образование расплавов. В четвертой зонепроисходит выдержка температуры для ее выравнивания по сечениюизделий и накопления расплава, необходимого для повышениякачества изделий. в пятой зоне, при охлаждении плиток до 600 спроисходит затвердевание жидкой фазы. в следующей шестой зонеплитки охлаждаются еще до 500 с. Охлаждение плиток еще на100 с в седьмой зоне характеризуется модификационными изменениямикварца. восьмой зоне плитки охлаждаются до комнатой температуры.При разработке схемы автоматизации важнейшей задачей являетсяреализация и поддержание температурного режима по зонам печи.Температурный режим, представленный в графическом виде, приведенв иллюстрации."
+              textAlignment="JUSTIFY" wrappingWidth="1136.08203125">
+            <font>
+                <Font name="System Italic" size="18.0"/>
+            </font>
+        </Text>
+        <Label layoutX="422.0" layoutY="7.0" text="Температурный режим" textFill="#ff8c00">
+            <font>
+                <Font name="System Italic" size="31.0"/>
+            </font>
+        </Label>
+        <Button fx:id="Back" layoutX="-4.0" layoutY="618.0" mnemonicParsing="false" onAction="#handleButtonAction"
+                prefHeight="71.0" prefWidth="1200.0"
+                style="             -fx-padding: 8 15 15 15;     -fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;   -fx-background-radius: 8;     -fx-background-color:    linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),         #9d4024,         #d86e3a,      #ff6f1b;     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.75) , 4,0,0,1 );   "
+                text="Вернуться" textFill="WHITE">
+            <font>
+                <Font name="System Italic" size="30.0"/>
+            </font>
+        </Button>
+        <ImageView fitHeight="344.0" fitWidth="681.0" layoutX="249.0" layoutY="46.0">
+            <image>
+                <Image url="file:\C:\Users\mikon\OneDrive\Рабочий стол\Diplom\Diplom\src\main\resources\pictures\PhotoGraf.png"/>
+            </image>
+        </ImageView>
+    </children>
 </AnchorPane>
