--- a/src/main/resources/com/example/diplom1/Dinamic.fxml
+++ b/src/main/resources/com/example/diplom1/Dinamic.fxml
@@ -24,7 +24,7 @@
       </Button>
       <ImageView fitHeight="352.0" fitWidth="717.0" layoutX="240.0" layoutY="37.0">
          <image>
-            <Image url="file:\C:\Users\mikon\OneDrive\Рабочий стол\Diplom\Diplom\src\main\resources\pictures\PhotoPhormul.png" />
+            <Image url="@../../../pictures/PhotoPhormul.png" />
          </image>
       </ImageView>
    </children>
